--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="top" class="bg-white py-5 relative z-10">
     <nav id="main-nav" aria-expanded="false" aria-controls="links" class="max-w-screen-xl w-11/12 mx-auto flex justify-between  items-center group ">
       <!-- logo -->
-      <div class="text-primary text-2xl font-bold leading-normal tracking-wider group-aria-expanded:hidden">NEXT INVEST</div>
+      <div class="text-primary text-2xl font-bold leading-normal tracking-wider group-aria-expanded:hidden" data-animation='fade-from-left' >NEXT INVEST</div>
       <!-- right -->
       <div id="links" class="lg:flex gap-6 hidden flex-col lg:flex-row group-aria-expanded:flex">
         <!-- links -->
@@ -88,19 +88,19 @@
                                                                             xxxxx
 -->
   <div class="h-[780px] bg-[url(img/hero.jpg)] bg-cover bg-center overflow-hidden relative">
-    <img src="img/Shape2.png" alt="decorative shape" class="absolute w-1/3 right-0 bottom-0">
+    <img src="img/Shape2.png" alt="decorative shape" class="absolute w-1/3 right-0 bottom-0" data-animation='fade-from-right' >
     <div class="w-11/12 max-w-screen-xl mx-auto h-full flex items-center relative">
       <div class="flex flex-col gap-10 relative">
         <!-- circle -->
-        <div class="aspect-square w-[558px] rounded-full bg-[#336EE1] bg-opacity-50 absolute -top-[26%] -left-[19%]">
+        <div class="aspect-square w-[558px] rounded-full bg-[#336EE1] bg-opacity-50 absolute -top-[26%] -left-[19%]" data-animation='fade-from-left' >
         </div>
-        <h1 class=" text-white [font-size:clamp(2rem,1.65rem+1.75vw,3.75rem)] font-bold  leading-relaxed relative">Meaningful investments in<br />Main Street
+        <h1 class=" text-white [font-size:clamp(2rem,1.65rem+1.75vw,3.75rem)] font-bold  leading-relaxed relative" data-animation='fade-in' data-duration='1s' data-delay='1s' >Meaningful investments in<br />Main Street
           businesses
         </h1>
-        <p class=" text-white [font-size:clamp(1rem,0.8rem+1vw,2rem)]  leading-loose relative">Browse vetted investment offerings in
+        <p class=" text-white [font-size:clamp(1rem,0.8rem+1vw,2rem)]  leading-loose relative" data-animation='fade-in' data-duration='1s' data-delay='2s' >Browse vetted investment offerings in
           communities all
           over the US.</p>
-        <button class="btn bg-primary px-10 pt-6 w-[270px] pb-[22px] text-white font-bold self-start relative">GET
+        <button class="btn bg-primary px-10 pt-6 w-[270px] pb-[22px] text-white font-bold self-start relative" data-animation='fade-in' data-duration='1s' data-delay='3s' >GET
           STARTED</button>
       </div>
     </div>
@@ -123,7 +123,7 @@
       <div class="flex gap-x-7 gap-y-9 flex-wrap justify-center relative">
         
         <!-- card1 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off1.jpg" alt="architecture" class="relative">
             <!-- tags -->
@@ -166,7 +166,7 @@
           </div>
         </div>
         <!-- card2 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' data-delay='750ms' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off2.jpg" alt="architecture" class="relative">
             <!-- tags -->
@@ -209,7 +209,7 @@
           </div>
         </div>
         <!-- card3 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' data-delay='1000ms' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off3.jpg" alt="laptop computer" class="relative">
             <!-- tags -->
@@ -252,7 +252,7 @@
           </div>
         </div>
         <!-- card4 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' data-delay='1250ms' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off4.jpg" alt="office" class="relative">
             <!-- tags -->
@@ -295,7 +295,7 @@
           </div>
         </div>
         <!-- card5 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' data-delay='1500ms' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off5.jpg" alt="wheat field" class="relative">
             <!-- tags -->
@@ -338,7 +338,7 @@
           </div>
         </div>
         <!-- card6 -->
-        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl">
+        <div class="w-[370px] h-[480px] overflow-hidden bg-white relative text-zinc-800 shadow-2xl" data-animation='fade-from-bottom' data-delay='1750ms' >
           <div class="absolute top-0 left-0 transition-all  hover:-top-[240px]">
             <img src="img/off6.jpg" alt="toy house" class="relative">
             <!-- tags -->
@@ -414,7 +414,7 @@
     <!-- container -->
     <div class="w-11/12 max-w-screen-xl mx-auto flex flex-wrap gap-10 relative z-10">
       <!-- left -->
-      <div class="[flex:1_1_400px]">
+      <div class="[flex:1_1_400px]" data-animation='fade-from-left' >
         <svg width="56" viewBox="0 0 56 56" class="fill-primary">
           <use href="#arrow-up"></use>
         </svg>
@@ -425,7 +425,7 @@
       </div>
 
       <!-- right -->
-      <svg width="570" height="357" viewBox="0 0 570 357" class="[flex:1_1_400px]">
+      <svg width="570" height="357" viewBox="0 0 570 357" class="[flex:1_1_400px]" data-animation='fade-from-right' >
         <use href="#chart"></use>
       </svg>
     </div>
@@ -443,14 +443,14 @@
     <img src="img/Shape.png" width="306px" alt="decorative shape" class="absolute top-1/4 right-0">
     <div class="w-11/12 max-w-screen-xl mx-auto mt-20 flex flex-wrap gap-10 items-center relative">
       <!-- left -->
-      <div class="[flex:1_1_300px]">
+      <div class="[flex:1_1_300px]" data-animation='fade-from-right' >
         <h2 class="text-zinc-800 [font-size:clamp(2rem,0.6rem+2vw,3rem)] font-bold">Looking to raise capital<br />for your growing business?</h2>
         <p class=" text-neutral-400 [font-size:clamp(1rem,0.8rem+1vw,2rem)] leading-loose mt-6">Whether expanding or opening a brand-new concept, we
           make it easy to raise money from thousands of local investors.</p>
         <button class="bg-primary text-white w-[270px] h-[70px] mt-10">APPLY ONLINE</button>
       </div>
       <!-- right -->
-      <div class="[flex:1_1_300px]">
+      <div class="[flex:1_1_300px]" data-animation='fade-from-left' >
         <svg viewBox="0 0 470 462">
           <use href="#investing-img"></use>
         </svg>
