add card button links

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
         <!-- card2 -->
@@ -205,7 +205,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
         <!-- card3 -->
@@ -248,7 +248,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
         <!-- card4 -->
@@ -291,7 +291,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
         <!-- card5 -->
@@ -334,7 +334,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
         <!-- card6 -->
@@ -377,7 +377,7 @@
                 </div>
               </div>
             </div>
-            <button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button>
+            <a href="#"><button class="w-full h-[72px] bg-secondary text-white font-bold hover:brightness-90">VIEW</button></a>
           </div>
         </div>
 
